<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.csi5175assignment1project_zixunxiang_yaqingzhu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gameA"
        android:name="com.example.csi5175assignment1project_zixunxiang_yaqingzhu.ui.gamea.GameAFragment"
        android:label="@string/menu_gameA"
        tools:layout="@layout/fragment_gamea" />

    <fragment
        android:id="@+id/nav_gameB"
        android:name="com.example.csi5175assignment1project_zixunxiang_yaqingzhu.ui.gameb.GameBFragment"
        android:label="@string/menu_gameB"
        tools:layout="@layout/fragment_gameb" />
</navigation>